Project/objects/Apttus_QPConfig__ProposalSummaryGroup__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Ext_GM__c</fullName>
        <description>Net Sales Price - Cost times Quantity</description>
        <inlineHelpText>Net Sales Price - Cost times Quantity</inlineHelpText>
        <label>Extended Gross Margin</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_GMarginP__c</fullName>
        <description>new formula will be &quot;IF((APTS_Total_Net_Sales_Price_Having_cost__c == 0), 0, (APTS_Gross_Margin__c / APTS_Total_Net_Sales_Price_Having_cost__c))&quot;</description>
        <formula>IF(OR(ISNULL(APTS_Total_Net_Sales_Price__c),APTS_Total_Net_Sales_Price__c=0),
1,
APTS_Gross_Margin__c /  APTS_Total_Net_Sales_Price__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percentage__c</fullName>
        <formula>Apttus_QPConfig__NetAdjustmentPercent__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Total_List_Price__c</fullName>
        <description>The summary of the Total List Price from the cart summary group object.</description>
        <inlineHelpText>The summary of the Total List Price from the cart line items.</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price__c</fullName>
        <label>Total Net Sales Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>